# polymarket-tick-orderbook-collector

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  docker-compose.yml
infra/terraform/: main.tf  terraform.tfvars.example  user_data.sh
scripts/: long_running_test.sh  test_local_relay.sh
src/: aggregate_s3.rs  aggregator.rs  lib.rs  main.rs  market_discovery.rs  onchain.rs  reward_analyzer.rs  storage.rs  trade_fetcher.rs  viewer.html  viewer.rs  ws_orderbook.rs
tests/: s3_integration_test.rs
