[package]
name = "polymarket-collector"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
futures = "0.3"
url = "2"
urlencoding = "2"
flate2 = "1"
hex = "0.4"
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
aws-config = "1.5"
aws-sdk-s3 = "1.49"
aws-credential-types = "1.2"
async-trait = "0.1"

[dev-dependencies]
mockall = "0.13"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["localstack"] }
tempfile = "3"
